--- a/index.html
+++ b/index.html
@@ -56,5 +56,35 @@
         </div>
     </div>
     </section>
+    <section class="page" id="kontakt">
+        <h2>КОНТАКТЫ</h2>
+        <div class="project-list">
+        <div class="table">
+            <img src="media/loc.png" alt="simbol">
+            <h3 class="color">АДРЕС:</h3>
+            <h3>УЛИЦА МИРА 140,
+                ОФИС 140-142</h3>
+        </div>
+        <div class="table">
+            <img src="media/tel.png" alt="simbol">
+            <h3 class="color">ТЕЛЕФОН:</h3>
+            <h3 class="num">8 (812) 111-22-33
+                8 (812) 111-22-33</h3>
+        </div>
+        <div class="table">
+            <img src="media/time.png" alt="simbol">
+            <h3 class="color">ВРЕМЯ РАБОТЫ:</h3>
+            <div class="time">
+                <h3>ПН-СБ</h3>
+                <h3>10:00 - 20:00</h3>
+            </div>
+        </div>
+        <div class="min">
+            <img src="media/mail.png" alt="simbol">
+            <h3 class="color">E-MAIL:</h3>
+            <a class="mail">INFO@VIP.RU</a>
+        </div>
+        </div>
+    </section>
 </body>
 </html>
